--- a/production/imports/ui/pages/firstTime.html
+++ b/production/imports/ui/pages/firstTime.html
@@ -38,7 +38,7 @@
                                     </a>
                                 </div>
                                 <div class="info-form" id="teachAssistInfo" hidden>
-                                    <form class="form ">
+                                    <form class="teach-assist-login">
                                         <input type="text" name="teachUser" placeholder="Student Number">
                                         <input type="password" name="teachPass" placeholder="Teach Assist Password">
                                         <input type="submit" class="btn btn-primary btn-lg btn-login mb-15" value="AUTHORIZE">
@@ -46,8 +46,8 @@
                                     </form>
                                 </div>
                                 <div class="info-form" id="subscriptionEmail" hidden>
-                                    <form class="form">
-                                        <input type="email" placeholder="Your Email">
+                                    <form id="newsletterEmailForm">
+                                        <input type="email" placeholder="Your Email" id="personalEmail">
                                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else or spam you. Read more about our privacy policy.</small>
                                         <input type="submit" class="btn btn-primary btn-lg btn-login mb-15" value="Join the club">
                                         <span>No, I do not want weekly briefing, please <a href="" id="skipEmail">skip</a></span>
@@ -68,7 +68,6 @@
                                         <input type="submit" class="btn btn-lg btn-login" value="Confirm">
                                     </form>
                                 </div>
-
                             </div>
                         </div>
                     </div>
