--- a/production/imports/ui/pages/dashboard.html
+++ b/production/imports/ui/pages/dashboard.html
@@ -289,7 +289,7 @@
             </div>
             {{#each blogCategory}}
                 <div class="col-lg-12">
-                    <div class="dash-item flexed dash-category-container" id="{{_id}}">
+                    <div class="dash-item flexed dash-category-container" data-category="blog" id="{{_id}}">
                         <div class="col-lg-2">
                             <h3>{{name}}</h3>
                         </div>
