--- a/production/imports/ui/pages/dashboard.html
+++ b/production/imports/ui/pages/dashboard.html
@@ -80,9 +80,8 @@
                             <div>
                                 <div class="content-preview">
                                     <h4 class="draft-title">{{title}}</h4>
-                                    <h5>{{subtitle}}</h5>
                                     <p class="meta">{{writer}} | Released: {{releaseDate}} | Drafted: {{draftedDate}} | Tags: {{tags}} | Category: {{categories}} | </p>
-                                    <p class="draft-body">{{content}}</p>
+                                    <p class="draft-body">{{subtitle}}</p>
                                 </div>
                                 <div class="operations">
                                     <button class="btn btn-approve"><i class="fa fa-check"></i> Approve</button>
