meteor-files API backup in app2

--- a/app2/client/main.html
+++ b/app2/client/main.html
@@ -86,9 +86,7 @@
 </template>
 
 <template name="addImage">
-  <div id="dropzone" class="dropzone" style="background-color:#303030">
-    Drop file here to upload
-  </div>
+    <input id="fileInput" type="file" />
 </template>
 
 <template name="viewImage">
